8295803: Console should be usable in jshell and other environments
Reviewed-by: jlaskey, alanb