@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2005, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -23,10 +21,15 @@
  * questions.
  */
 
-package jdk.internal.access;
-
-import java.io.Console;
-
-public interface JavaIOAccess {
-    Console console();
+/**
+ * @test
+ * @bug 8295803
+ * @summary Tests System.console() works with the security manager
+ * @run main/othervm/java.security.policy=test.policy -Djava.security.manager -Djdk.console=jdk.internal.le SecurityManagerTest
+ */
+public class SecurityManagerTest {
+    public static void main(String... args) {
+        System.console();
+        // consider it successful if ServiceConfigurationError was not thrown here
+    }
 }
